--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mueller</title>
+    <title>NABDH ALHAYAH marine equipment repair and maintenance</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
