--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                     <div class="contact-block">
                         <h6>Contact Infos</h6>
                         <ul class="contact-list">
-                            <li><a href="tel:+971-43-3389724">+971-43-3389724</a></li>
+                            <li><a href="tel:+971-45-605918">045-605-918</a></li>
                             
                         </ul>
                     </div>
@@ -612,7 +612,7 @@
             <div class="row list-block block-lg-one-half block-tab-whole block-stack-on-1000 s-footer__btns">
                 <div class="column list-block__item">
                     <div class="s-footer__contact-btn">
-                        <a href="tel:+971-43-3389724" class="btn btn--primary u-fullwidth">
+                        <a href="tel:+971-45-605918" class="btn btn--primary u-fullwidth">
                             Let's Talk 
                         </a>
                     </div>
