--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                     <h2 class="title text-display-1">
                     We’re here to help with all your marine equipment repair and maintenance needs. 
                     Whether you have a question, need a quote, or want to schedule a service, 
-                    our team is ready to assist you. <a href="gmail.com:#0" title="">Dodomontaser991@gmail.com</a>
+                    our team is ready to assist you. <a href="gmail.com:#0" title="">hr@nabdhalhayah.com</a>
                     </h2>
                 </div>    
                 <div class="column lg-6 stack-on-1100 section-header__secondary">
